[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WDLMerge"
version = "0.1.0"
authors = [
  { name = "Kopal Garg", email = "gargkopal24@gmail.com" }
]
description = "Merge WDLs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
